Using a safer method to identify the `on_` methods to be decorated
This is to fix https://github.com/zoltan-fedor/falcon-caching/issues/4

It turns out that the upstream Falcon package itself has a safer method to identify which methods to decorate in a resource class, so we will be using that to minimize the number of false positives.

Signed-off-by: Zoltan Fedor <zoltan.1.fedor@gmail.com>

--- a/CHANGES
+++ b/CHANGES
@@ -4,8 +4,8 @@ Changelog
 Version 0.2.0
 -------------
 
-- The `request_body` is not longer included in the cache key, `see <https://github.com/zoltan-fedor/falcon-caching/issues/3>`_
-
+- The `request_body` is no longer included in the cache key, `see <https://github.com/zoltan-fedor/falcon-caching/issues/3>`_
+- Added a safer method to identify the `on_` methods to decorate, `see <https://github.com/zoltan-fedor/falcon-caching/issues/4>`_
 
 Version 0.1.0
 -------------
