Added a new memoize() method to chache arbitrary methods with their arguments
Signed-off-by: Zoltan Fedor <zoltan.1.fedor@gmail.com>

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,11 @@
 Changelog
 =========
 
+Version 0.3.0
+-------------
+
+- `Cache.memoize()` and `Cache.delete_memoized()` methods were added to allow you to cache the result of other non-resource related functions with their argurments.
+
 Version 0.2.0
 -------------
 
