--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,17 @@
 Changelog
 =========
 
+
+Version 0.3.2
+-------------
+
+- Fixing the issue with multiple decorators when `@cache.cached()` is not the topmost one
+
+Version 0.3.1
+-------------
+
+- Added a new memoize() method to cache arbitrary methods with their arguments
+
 Version 0.3.0
 -------------
 
