Fixing document readability issues
The default width was too small and required scrolling.
Also mobile readability wasn't great.

Signed-off-by: Zoltan Fedor <zoltan.1.fedor@gmail.com>

--- a/CHANGES
+++ b/CHANGES
@@ -6,6 +6,7 @@ Version 0.3.2
 -------------
 
 - Fixing the issue with multiple decorators when `@cache.cached()` is not the topmost one
+- Fixing document readability issues in Sphinx
 
 Version 0.3.1
 -------------
