--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,12 @@ Changelog
 =========
 
 
+Version 1.0.0
+-------------
+
+- Async support has been added
+- Switching CI from Travis to GitHub Actions
+
 Version 0.3.4
 -------------
 
