--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,11 @@ Changelog
 =========
 
 
+Version 1.0.1
+-------------
+
+- Documentation fix - AsyncBackend API reference was missing
+
 Version 1.0.0
 -------------
 
